--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,119 @@
-.App {
+
+.form-container{
+  background: #ecf0f3;
+  font-family: 'Nunito', sans-serif;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+}
+
+.form-container .title{
+  color: #0074D9;
+  font-size: 25px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   text-align: center;
+  margin: 0 0 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-container .form-horizontal .form-group{ margin: 0 0 25px 0; }
+.form-container .form-horizontal .form-group label{
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-container .form-horizontal .form-control{
+  color: #333;
+  background: #ecf0f3;
+  font-size: 15px;
+  height: 50px;
+  padding: 20px;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 50px;
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.form-container .form-horizontal .btn{
+  color: #000;
+  background-color: #0074D9 ;
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 100%;
+  padding: 12px 15px 11px;
+  border-radius: 20px;
+  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+  border: none;
+  transition: all 0.5s ease 0s;
 }
 
-.App-link {
-  color: #61dafb;
+.card{
+/* color: #333;
+  background: #ecf0f3;
+  font-size: 15px;
+  height: 200px;
+ 
+  padding: 20px;
+  letter-spacing: 1px;
+  border: none;
+  
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+ 
+  transition: all 0.3s ease 0s; */
+
+
+
+
+
+
+
+/* 
+display: flex;
+justify-content: center;
+justify-content: space-evenly;
+flex-wrap: wrap;
+border-color: #0074D9;
+border-style: solid;
+margin-top: 30px;
+margin-left: 50px;
+margin-right: 50px; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.container{
+margin-left: 280px;
+margin-top: 100px;
+}
+
+label{
+padding-right: 20px;
+}
+
+.boxes{
+margin-top: 70px;
+margin-left: 20px;
+display: inline-flex;
+
+justify-content: space-between;
+
+
+color: #333;
+background: #ecf0f3;
+font-size: 15px;
+height: 150px;
+padding: 20px;
+
+border: none;
+border-radius: 10px;
+box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+display: inline-block;
+transition: all 0.3s ease 0s;
+
+
 }
